After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 374914 - this mp4 video doesn't play correctly (codec problem)
this mp4 video doesn't play correctly (codec problem)
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-ugly
0.10.4
Other All
: Normal normal
: 0.10.5
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2006-11-13 23:26 UTC by owen-bugs
Modified: 2016-03-22 03:19 UTC
See Also:
GNOME target: ---
GNOME version: 2.15/2.16



Description owen-bugs 2006-11-13 23:26:44 UTC
Please describe the problem:
I made the following video with Avid Symphony Nitris:
http://ywwg.com/videos/mom%20mp4.mp4

it is an mp4 (1500kbps) with uncompressed PCM audio.  When I try to play the file in totem-gstreamer, I get an error:
subclass did not specify output size

mplayer and xine can play the file

Steps to reproduce:


Actual results:


Expected results:


Does this happen every time?


Other information:
gst-inspect also gives an error: 
Could not load plugin file: Opening module failed

Here's what mplayer says as it starts up (successfully):
Playing mom mp4.mp4.
ISO: File Type Major Brand: ISO/IEC 14496-1 (MPEG-4 system) v2
QuickTime/MOV file format detected.
--------------
MOV track #0: 60 chunks, 0 samples
Audio bits: 16  chans: 2  rate: 44100
MOV: Found unknown audio atom Fourcc: twos
--------------
MOV track #1: 60 chunks, 885 samples
MOV: Found MPEG4 movie Elementary Stream Descriptor atom (69)!
Image size: 640 x 480 (24 bpp)
Display size: 640 x 480
Fourcc: mp4v  Codec: ''
--------------
MOV: longest streams: A: #0 (60 samples)  V: #1 (885 samples)
VIDEO:  [mp4v]  640x480  24bpp  29.970 fps    0.0 kbps ( 0.0 kbyte/s)
==========================================================================
Opening audio decoder: [pcm] Uncompressed PCM audio decoder
AUDIO: 44100 Hz, 2 ch, s16be, 1411.2 kbit/100.00% (ratio: 176400->176400)
Selected audio codec: [pcm] afm:pcm (Uncompressed PCM)
==========================================================================
vo: X11 running at 1400x1050 with depth 24 and 32 bpp (":0.0" => local display)
==========================================================================
Opening video decoder: [ffmpeg] FFmpeg's libavcodec codec family
Selected video codec: [ffodivx] vfm:ffmpeg (FFmpeg MPEG-4)
==========================================================================
Checking audio filter chain for 44100Hz/2ch/s16be -> 44100Hz/2ch/s16be...
AF_pre: 44100Hz/2ch/s16be
AO: [oss] 44100Hz 2ch s16be (2 bps)
Building audio filter chain for 44100Hz/2ch/s16be -> 44100Hz/2ch/s16be...
Starting playback...
VDec: vo config request - 640 x 480 (preferred csp: Planar YV12)
VDec: using Planar YV12 as output csp (no 0)
Movie-Aspect is 1.33:1 - prescaling to correct movie aspect.
VO: [xv] 640x480 => 640x480 Planar YV12
Comment 1 Wim Taymans 2006-11-14 11:43:32 UTC
Works fine with cvs after the following patch:

        * gst/qtdemux/qtdemux.c: (gst_qtdemux_get_duration),
        (gst_qtdemux_handle_src_query), (qtdemux_parse_trak):
        Don't parse extra sample params for raw pcm. Fixes #374914.